--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
   <div class="container">
     <div id="quote-box">
       <p id="quote">There once was a man named Declan</p>
-      <p id="source">Declan<span class="citation"></span><span class="year"></span></p>
+      <p id="source">Declan<span class="citation"></span><span id="year">2018</span>
+</p>
+       
+
     </div>
     <button id="loadQuote">Show another quote</button>
   </div>
