--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <div class="container">
     <div id="quote-box">
+      <p id="tag">#Inspiration</p>
       <p id="quote">There once was a man named Declan</p>
       <p id="source">Declan<span class="citation">Declans Journal</span><span id="year">2018</span></p>
        
